// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion all options renders 1`] = `
<body>
  <div>
    <div
      data-orientation="vertical"
    >
      <div
        class="bg-red-faint border-b border--red-dark"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-:rp:"
          aria-expanded="true"
          class="w-full bg-red txt-l txt-bold link link--white bg-red-dark-on-hover px6 py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          data-testid="accordion-trigger-one"
          id="radix-:ro:"
          type="button"
        >
          <div>
            one
            <span
              class="ml6 txt-normal"
            >
              I am active
            </span>
          </div>
        </button>
        <div
          aria-labelledby="radix-:ro:"
          data-orientation="vertical"
          data-state="open"
          id="radix-:rp:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="py6 px6 txt-l bg-red-light"
          >
            First body
          </div>
        </div>
      </div>
      <div
        class="bg-red-faint border-b border--red-dark"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rr:"
          aria-expanded="false"
          class="w-full bg-red txt-l txt-bold link link--white bg-red-dark-on-hover px6 py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-two"
          id="radix-:rq:"
          type="button"
        >
          <div>
            two
          </div>
        </button>
        <div
          aria-labelledby="radix-:rq:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:rr:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        class="bg-red-faint border-b border--red-dark"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rt:"
          aria-expanded="false"
          class="w-full bg-red txt-l txt-bold link link--white bg-red-dark-on-hover px6 py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-third"
          id="radix-:rs:"
          type="button"
        >
          <div>
            third
          </div>
        </button>
        <div
          aria-labelledby="radix-:rs:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:rt:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Accordion basic renders 1`] = `
<body>
  <div>
    <div
      data-orientation="vertical"
    >
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r1:"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-one"
          id="radix-:r0:"
          type="button"
        >
          <span>
            one
          </span>
        </button>
        <div
          aria-labelledby="radix-:r0:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:r1:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r3:"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-two"
          id="radix-:r2:"
          type="button"
        >
          <span>
            two
          </span>
        </button>
        <div
          aria-labelledby="radix-:r2:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:r3:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r5:"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-three"
          id="radix-:r4:"
          type="button"
        >
          <span>
            three
          </span>
        </button>
        <div
          aria-labelledby="radix-:r4:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:r5:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Accordion disabled renders 1`] = `
<body>
  <div>
    <div
      data-orientation="vertical"
    >
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rd:"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-one"
          id="radix-:rc:"
          type="button"
        >
          <span>
            one
          </span>
        </button>
        <div
          aria-labelledby="radix-:rc:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:rd:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rf:"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-pointer"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-two"
          id="radix-:re:"
          type="button"
        >
          <span>
            two
          </span>
        </button>
        <div
          aria-labelledby="radix-:re:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:rf:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
      <div
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:rh:"
          aria-expanded="false"
          class="w-full txt-s txt-bold txt-truncate link link--gray py6 cursor-default color-gray-light"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          data-testid="accordion-trigger-three"
          disabled=""
          id="radix-:rg:"
          type="button"
        >
          <span>
            three
          </span>
        </button>
        <div
          aria-labelledby="radix-:rg:"
          data-orientation="vertical"
          data-state="closed"
          hidden=""
          id="radix-:rh:"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</body>
`;
